[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Map_Parts/MP-37-Moving_Plat_Way_point.gd" type="Script" id=1]
[ext_resource path="res://Tilesets/TS-05-Main-Brick.tres" type="TileSet" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.02551, 6.92517 )

[sub_resource type="CapsuleShape2D" id=2]
height = 90.0

[node name="MP-37-Moving_Plat_Way_point" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0306702, 9.75965 )
shape = SubResource( 1 )
disabled = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 20, 20 )
collision_layer = 28
format = 1
tile_data = PoolIntArray( 65533, 0, 196608, 65534, 0, 196609, 65535, 0, 196609, 0, 0, 196609, 1, 0, 196609, 2, 0, 196610 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 2 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
